# meta

./: .gitignore  CHANGELOG.md  LICENSE  README.md  footer.md  goreleaser-full.yml  goreleaser-lab.yml  goreleaser-simple.yml  mise.toml  renovate-preset.json  renovate.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: actionlint.yml  artifacts-comment.yml  build.yml  bun-audit.yml  bun-build.yml  bun-bundle-size.yml  bun-format-check.yml  bun-knip.yml  bun-lighthouse.yml  bun-lint.yml  bun-semgrep.yml  bun-test.yml  bun-typecheck.yml  check-managed-files.yml  check-upstream-release.yml  ci.yml  codeql.yml  commitlint.yml  cron.yml  dependabot-sync.yml  go-lint.yml  go-release.yml  go-sec.yml  go-semgrep.yml  go-test.yml  go-vulncheck.yml  goreleaser-deprecation-check.yml  goreleaser.yml  govulncheck.yml  hadolint.yml  lint-sync.yml  (+26 more)
.ruler/: AGENTS.md  ruler.toml
codeqls/: ZenQuery.yml  dcf-access-cli.yml  dcf-access.yml  dcf-platform-cli.yml  dcf-platform.yml  libdcf.yml  otel-bundle.yml  test-repo.yml
configs/: .commitlintrc.yml  .golangci.yml  .prettierignore  eslint.config.js  knip.json  lighthouserc.json  renovate.json  vitest.config.ts
golang-templates/: .gitignore  mise.toml
python-templates/: .editorconfig  .gitignore  mise.toml  pyproject.toml
python-templates/.github/workflows/: ci.yml  codeql.yml
scripts/: run-dependabot-sync.sh  run-lint-sync.sh
templates/: .golangci.yml  cd.yml  ci.yml  codeql.yml  notify.yml  release.yml  snapshot.yml
web-templates/: .gitignore  TODO.md  mise.toml
(+71 files in other folders)
