[project]
name = ""
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = [
    "pytest",
    "coverage",
    "ruff",
    "bandit",
    "pip-audit",
    "cyclonedx-bom",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E402",  # module-level imports not at top of file
]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
